--- a/App.xaml
+++ b/App.xaml
@@ -8,6 +8,9 @@
 
     <!--Application Resources-->
     <Application.Resources>
+
+        <MediaElement x:Name="bgPlayer"  AutoPlay="False" MediaOpened="bgPlayer_MediaOpened"  MediaEnded="bgPlayer_MediaEnded"/>
+        
     </Application.Resources>
 
     <Application.ApplicationLifetimeObjects>
