--- a/StatsPage.xaml
+++ b/StatsPage.xaml
@@ -28,20 +28,20 @@
 
         <!--ContentPanel - place additional content here-->
         <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
-            <TextBlock Foreground="Black" Height="30" HorizontalAlignment="Left" Margin="110,146,0,0" Name="lblTotal" Text=": Total Points" VerticalAlignment="Top" FontSize="24" />
-            <TextBlock Foreground="Black" Height="30" HorizontalAlignment="Left" Margin="110,283,0,0" Name="lblWrongAnswer" Text=": Total Wrong Answers" VerticalAlignment="Top" FontSize="24" />
-            <TextBlock Foreground="Black" Height="30" HorizontalAlignment="Left" Margin="110,249,0,0" Name="lblRAnswer" Text=":Total Correct Answers" VerticalAlignment="Top" FontSize="24" />
-            <TextBlock Foreground="Black" Height="30" HorizontalAlignment="Left" Margin="110,179,0,0" Name="textBlock1" Text=": Total Session Played" VerticalAlignment="Top" FontSize="24" />
-            <TextBlock Foreground="Black" Height="30" HorizontalAlignment="Left" Margin="110,319,0,0" Name="textBlock3" Text=": Total Passes" VerticalAlignment="Top" FontSize="24" />
-            <TextBlock FontSize="24" Foreground="Black" Height="30" HorizontalAlignment="Right" Margin="0,214,59,0" Name="textBlock2" Text=": Total Questions Answered" VerticalAlignment="Top" TextAlignment="Left" />
+            <TextBlock Foreground="White" Height="32" HorizontalAlignment="Left" Margin="60,89,0,0" Name="lblTotal" Text="Total Points : " VerticalAlignment="Top" FontSize="24" />
+            <TextBlock Foreground="White" Height="32" HorizontalAlignment="Left" Margin="60,226,0,0" Name="lblWrongAnswer" Text="Total Wrong Answers : " VerticalAlignment="Top" FontSize="24" />
+            <TextBlock Foreground="White" Height="32" HorizontalAlignment="Left" Margin="60,192,0,0" Name="lblRAnswer" Text="Total Correct Answers : " VerticalAlignment="Top" FontSize="24" />
+            <TextBlock Foreground="White" Height="32" HorizontalAlignment="Left" Margin="60,122,0,0" Name="textBlock1" Text="Total Session Played : " VerticalAlignment="Top" FontSize="24" />
+            <TextBlock Foreground="White" Height="32" HorizontalAlignment="Left" Margin="60,262,0,0" Name="textBlock3" Text="Total Passes : " VerticalAlignment="Top" FontSize="24" />
+            <TextBlock FontSize="24" Foreground="White" Height="32" HorizontalAlignment="Right" Margin="0,157,104,0" Name="textBlock2" Text="Total Questions Answered : " VerticalAlignment="Top" TextAlignment="Left" />
 
 
-            <TextBlock Foreground="Black" HorizontalAlignment="Left" Margin="45,145,0,0" Name="txtTotal" Text="{Binding Path=GScore.Total}" Width="57" FontSize="24" />
-            <TextBlock Foreground="Black" Height="30" HorizontalAlignment="Left" Margin="45,284,0,0" Name="txtWA" Text="{Binding Path=GScore.TotlaWrongAnswers}" VerticalAlignment="Top" Width="57" FontSize="24" />
-            <TextBlock Foreground="Black" Height="30" HorizontalAlignment="Left" Margin="45,249,0,0" Name="txtCA" Text="{Binding Path=GScore.TotalRightAnswers}" VerticalAlignment="Top" Width="57" FontSize="24" />
-            <TextBlock Foreground="Black" Height="30" HorizontalAlignment="Left" Margin="45,180,0,0" Name="txtTG" Text="{Binding Path=GScore.TotalGames}" VerticalAlignment="Top" Width="67" FontSize="24" />
-            <TextBlock Foreground="Black" Height="30" HorizontalAlignment="Left" Margin="45,319,0,0" Name="txtPasses" Text="{Binding Path=GScore.TotalPasses}" VerticalAlignment="Top" Width="67" FontSize="24" />
-            <TextBlock FontSize="24" Foreground="Black" Height="30" HorizontalAlignment="Left" Margin="45,214,0,0" Name="txtTQ" Text="{Binding Path=GScore.TotalQuestions}" VerticalAlignment="Top" Width="67" />
+            <TextBlock Foreground="White" Height="32" HorizontalAlignment="Left" Margin="206,89,0,506" Name="txtTotal" Text="{Binding Path=GScore.Total}" Width="57" FontSize="24" />
+            <TextBlock Foreground="White" Height="32" HorizontalAlignment="Left" Margin="313,226,0,0" Name="txtWA" Text="{Binding Path=GScore.TotlaWrongAnswers}" VerticalAlignment="Top" Width="57" FontSize="24" />
+            <TextBlock Foreground="White" Height="32" HorizontalAlignment="Left" Margin="313,192,0,0" Name="txtCA" Text="{Binding Path=GScore.TotalRightAnswers}" VerticalAlignment="Top" Width="57" FontSize="24" />
+            <TextBlock Foreground="White" Height="32" HorizontalAlignment="Left" Margin="297,122,0,0" Name="txtTG" Text="{Binding Path=GScore.TotalGames}" VerticalAlignment="Top" Width="57" FontSize="24" />
+            <TextBlock Foreground="White" Height="32" HorizontalAlignment="Left" Margin="210,262,0,0" Name="txtPasses" Text="{Binding Path=GScore.TotalPasses}" VerticalAlignment="Top" Width="57" FontSize="24" />
+            <TextBlock FontSize="24" Foreground="White" Height="32" HorizontalAlignment="Left" Margin="358,157,0,0" Name="txtTQ" Text="{Binding Path=GScore.TotalQuestions}" VerticalAlignment="Top" Width="57" />
         </Grid>
     </Grid>
  
