--- a/TipsPage.xaml
+++ b/TipsPage.xaml
@@ -1,5 +1,5 @@
 ﻿<phone:PhoneApplicationPage 
-    x:Class="GrandAStudio.Filmia.MainPage"
+    x:Class="GrandAStudio.Filmia.TipsPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
@@ -11,17 +11,26 @@
     Foreground="{StaticResource PhoneForegroundBrush}"
     SupportedOrientations="Portrait" Orientation="Portrait"
     mc:Ignorable="d" d:DesignHeight="768" d:DesignWidth="480"
-    shell:SystemTray.IsVisible="True">
+    shell:SystemTray.IsVisible="True" BackKeyPress="PhoneApplicationPage_BackKeyPress">
 
     <!--LayoutRoot is the root grid where all page content is placed-->
-    
+    <Grid x:Name="LayoutRoot" >
+        <Grid.Background >
+            <ImageBrush ImageSource=" Images/main screen.png"></ImageBrush>
+        </Grid.Background>
+        <Grid.RowDefinitions>
 
-        <!--TitlePanel contains the name of the application and page title-->
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <TextBlock Height="101" HorizontalAlignment="Left" Margin="35,602,0,0" Name="textBlock1" Text="Loading....." VerticalAlignment="Top" Width="326" FontSize="40" FontWeight="Bold" />
+        <TextBlock Height="553" HorizontalAlignment="Left" Margin="35,51,0,0" Name="textBlock2"  Text="{Binding Text}" VerticalAlignment="Top" Width="391" FontSize="32" TextWrapping="Wrap" />
+    </Grid>
+
+    <!--TitlePanel contains the name of the application and page title-->
       
 
         <!--ContentPanel - place additional content here-->
-        <Image HorizontalAlignment="Left" Margin="0" Name="image1" Stretch="Fill" VerticalAlignment="Top" Source="/GrandAStudio.Filmia;component/Images/windows%20company%20logo.png" />
-   
+       
  
     <!--Sample code showing usage of ApplicationBar-->
     <!--<phone:PhoneApplicationPage.ApplicationBar>
