--- a/GamePage.xaml
+++ b/GamePage.xaml
@@ -96,7 +96,7 @@
         
         <TextBlock Text="{Binding CurrentScore}" Name="txtScore" TextWrapping="Wrap" Margin="20,15,0,18" Style="{StaticResource PhoneTextSubtleStyle}" Foreground="#FF030000" Width="64" HorizontalAlignment="Left" FontWeight="Bold" FontSize="30" TextAlignment="Center" />
         <TextBlock Text="{Binding Timer}" Name="txtTimeLeft" TextWrapping="Wrap" Grid.Row="1" Margin="20,0,0,46" Style="{StaticResource PhoneTextSubtleStyle}" Foreground="#FF030000" Height="40" Width="64" HorizontalAlignment="Left" TextAlignment="Center" FontSize="30" FontWeight="Bold" />
-        <Image Height="160"  HorizontalAlignment="Left" Name="imgResultState" Stretch="Fill" Source=" test" Width="160"    Grid.Column="1" Grid.Row="0" Grid.RowSpan="2"/>
+        <Image Height="160"  HorizontalAlignment="Left" Name="imgResultState" Stretch="Uniform" Source="test" Width="160"    Grid.Column="1" Grid.Row="0" Grid.RowSpan="2"/>
 
         <MediaElement x:Name="gamePlayer" AutoPlay="True" Visibility="Collapsed" MediaOpened="gamePlayer_MediaOpened" MediaEnded="SoundPlayer_MediaEnded" />
 
@@ -104,7 +104,7 @@
 
 
         <StackPanel Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="2" FlowDirection="LeftToRight" VerticalAlignment="Top"  >
-            <TextBlock   Margin="20,20,0,0" Height="Auto" HorizontalAlignment="Left"  Name="textBlock1" Text="{Binding Path=CurrentQuestion.Question }" VerticalAlignment="Top" Width="400" TextWrapping="Wrap"   Style="{StaticResource PhoneTextLargeStyle}" Foreground="Black"  />
+            <TextBlock   Margin="20,20,0,0" Height="Auto" HorizontalAlignment="Left"  Name="textBlock1" Text="{Binding Path=CurrentQuestion.Question }" VerticalAlignment="Top" Width="400" TextWrapping="Wrap"   Style="{StaticResource PhoneTextNormalStyle}" Foreground="Black" FontWeight="ExtraBold" FontSize="30" />
             <TextBlock Height="20" />
             <ListBox  
                      Name="lstAnswers" SelectionChanged="ListBox_SelectionChanged" 
