--- a/Categories.xaml
+++ b/Categories.xaml
@@ -45,15 +45,15 @@
                     Height="100"
                     
                     Name="btnCAt00"
-                    Source="Images\category grey.png"  /> 
-        <TextBlock  Grid.Column="1" Grid.Row="2"  Text="00s" HorizontalAlignment="Center" VerticalAlignment="Center" Style="{StaticResource PhoneTextSmallStyle}" TextAlignment="Center" />
+                    Source="Images\category grey.png"  />
+        <TextBlock Name="txtCAt00" FontWeight="Bold"  Grid.Column="1" Grid.Row="2"  Text="00s" HorizontalAlignment="Center" VerticalAlignment="Center" Style="{StaticResource PhoneTextSmallStyle}" TextAlignment="Center" />
         <Image Grid.Column="2" Grid.Row="2"
                    
                     Height="100"
                     
                     Name="btnCAt90"
                     Source="Images\category grey.png" />
-        <TextBlock  Grid.Column="2" Grid.Row="2"  Text="90s" HorizontalAlignment="Center" VerticalAlignment="Center" Style="{StaticResource PhoneTextSmallStyle}" TextAlignment="Center" />
+        <TextBlock Name="txtCAt90" FontWeight="Bold"  Grid.Column="2" Grid.Row="2"  Text="90s" HorizontalAlignment="Center" VerticalAlignment="Center" Style="{StaticResource PhoneTextSmallStyle}" TextAlignment="Center" />
 
         <Image Grid.Column="3" Grid.Row="2"
                    
@@ -61,7 +61,7 @@
                     
                     Name="btnCAt80"
                     Source="Images\category grey.png"  />
-        <TextBlock  Grid.Column="3" Grid.Row="2"  Text="80s" HorizontalAlignment="Center" VerticalAlignment="Center" Style="{StaticResource PhoneTextSmallStyle}" TextAlignment="Center" />
+        <TextBlock Name="txtCAt80" FontWeight="Bold"  Grid.Column="3" Grid.Row="2"  Text="80s" HorizontalAlignment="Center" VerticalAlignment="Center" Style="{StaticResource PhoneTextSmallStyle}" TextAlignment="Center" />
 
         <Image Grid.Column="4" Grid.Row="2"
                    
@@ -69,7 +69,7 @@
                     
                     Name="btnCAtQT"
                     Source="Images\category grey.png"  />
-        <TextBlock TextWrapping="Wrap" Grid.Column="4" Grid.Row="2"  Text="Quotes And Taglines"  HorizontalAlignment="Center" VerticalAlignment="Center" Style="{StaticResource PhoneTextSmallStyle}" TextAlignment="Center" />
+        <TextBlock Name="txtCAtQT" FontWeight="Bold" TextWrapping="Wrap" Grid.Column="4" Grid.Row="2"  Text="Quotes And Taglines"  HorizontalAlignment="Center" VerticalAlignment="Center" Style="{StaticResource PhoneTextSmallStyle}" TextAlignment="Center" />
 
         <Image Grid.Column="1" Grid.Row="3"
                    
@@ -77,7 +77,7 @@
                     
                     Name="btnCAtStars"
                     Source="Images\category grey.png"  />
-        <TextBlock TextWrapping="Wrap"  Grid.Column="1" Grid.Row="3"  Text="Movie's Stars" HorizontalAlignment="Center" VerticalAlignment="Center" Style="{StaticResource PhoneTextSmallStyle}" TextAlignment="Center" />
+        <TextBlock Name="txtCAtStars" FontWeight="Bold"  TextWrapping="Wrap"  Grid.Column="1" Grid.Row="3"  Text="Movie's Stars" HorizontalAlignment="Center" VerticalAlignment="Center" Style="{StaticResource PhoneTextSmallStyle}" TextAlignment="Center" />
 
         <Image Grid.Column="2" Grid.Row="3" Grid.ColumnSpan="2" Grid.RowSpan="2"
                    
@@ -85,7 +85,7 @@
                     
                     Name="btnCAtRan"
                     Source="Images\category blue.png" Tap="btnCAtRan_Tap" />
-        <TextBlock  Grid.Column="2" Grid.Row="3" Grid.ColumnSpan="2" Grid.RowSpan="2"  Text="Random" HorizontalAlignment="Center" VerticalAlignment="Center" Style="{StaticResource PhoneTextSmallStyle}" TextAlignment="Center" />
+        <TextBlock Name="txtCAtRan" FontWeight="Bold" Grid.Column="2" Grid.Row="3" Grid.ColumnSpan="2" Grid.RowSpan="2"  Text="Random" HorizontalAlignment="Center" VerticalAlignment="Center" Style="{StaticResource PhoneTextSmallStyle}" TextAlignment="Center" />
 
         <Image Grid.Column="4" Grid.Row="3"
                    
@@ -93,7 +93,7 @@
                     
                     Name="btnCAtRoles"
                     Source="Images\category grey.png" />
-        <TextBlock  Grid.Column="4" Grid.Row="3"  Text="Movie Roles" HorizontalAlignment="Center" VerticalAlignment="Center" Style="{StaticResource PhoneTextSmallStyle}" Margin="12" TextWrapping="Wrap" TextAlignment="Center" />
+        <TextBlock Name="txtCAtRoles" FontWeight="Bold" Grid.Column="4" Grid.Row="3"  Text="Movie Roles" HorizontalAlignment="Center" VerticalAlignment="Center" Style="{StaticResource PhoneTextSmallStyle}" Margin="12" TextWrapping="Wrap" TextAlignment="Center" />
 
         <Image Grid.Column="1" Grid.Row="4"
                    
@@ -101,7 +101,7 @@
                     
                     Name="btnCAtOscars"
                     Source="Images\category grey.png"/>
-        <TextBlock  Grid.Column="1" Grid.Row="4"  Text="Oscars" HorizontalAlignment="Center" VerticalAlignment="Center" Style="{StaticResource PhoneTextSmallStyle}" TextAlignment="Center" />
+        <TextBlock Name="txtCAtOscars" FontWeight="Bold" Grid.Column="1" Grid.Row="4"  Text="Oscars" HorizontalAlignment="Center" VerticalAlignment="Center" Style="{StaticResource PhoneTextSmallStyle}" TextAlignment="Center" />
 
         <Image Grid.Column="4" Grid.Row="4"
                    
@@ -109,7 +109,7 @@
                     
                     Name="btnCAtDirectors"
                     Source="Images\category grey.png"  />
-        <TextBlock  Grid.Column="4" Grid.Row="4"  Text="Directors" HorizontalAlignment="Center" VerticalAlignment="Center" Style="{StaticResource PhoneTextSmallStyle}" TextAlignment="Center" />
+        <TextBlock Name="txtCAtDirectors"  FontWeight="Bold" Grid.Column="4" Grid.Row="4"  Text="Directors" HorizontalAlignment="Center" VerticalAlignment="Center" Style="{StaticResource PhoneTextSmallStyle}" TextAlignment="Center" />
 
         <Image Grid.Column="1" Grid.Row="5"
                    
@@ -117,7 +117,7 @@
                     
                     Name="btnCAtAC"
                     Source="Images\category grey.png"  />
-        <TextBlock TextWrapping="Wrap"  Grid.Column="1" Grid.Row="5"  Text="Animation And Comedy" HorizontalAlignment="Center" VerticalAlignment="Center" Style="{StaticResource PhoneTextSmallStyle}" TextAlignment="Center" />
+        <TextBlock  Name="txtCAtAC" FontWeight="Bold" TextWrapping="Wrap"  Grid.Column="1" Grid.Row="5"  Text="Animation And Comedy" HorizontalAlignment="Center" VerticalAlignment="Center" Style="{StaticResource PhoneTextSmallStyle}" TextAlignment="Center" />
 
         <Image Grid.Column="2" Grid.Row="5"
                    
@@ -125,7 +125,7 @@
                     
                     Name="btnCAtHS"
                     Source="Images\category grey.png"  />
-        <TextBlock TextWrapping="Wrap"  Grid.Column="2" Grid.Row="5"  Text="Horror And Scifi" HorizontalAlignment="Center" VerticalAlignment="Center" Style="{StaticResource PhoneTextSmallStyle}" TextAlignment="Center" />
+        <TextBlock  Name="txtCAtHS" FontWeight="Bold" TextWrapping="Wrap"  Grid.Column="2" Grid.Row="5"  Text="Horror And Scifi" HorizontalAlignment="Center" VerticalAlignment="Center" Style="{StaticResource PhoneTextSmallStyle}" TextAlignment="Center" />
 
         <Image Grid.Column="3" Grid.Row="5"
                    
@@ -133,7 +133,7 @@
                     
                     Name="btnCAtAdvanced"
                     Source="Images\category grey.png"  />
-        <TextBlock  Grid.Column="3" Grid.Row="5"  Text="Advanced" HorizontalAlignment="Center" VerticalAlignment="Center" Style="{StaticResource PhoneTextSmallStyle}" TextAlignment="Center" />
+        <TextBlock  Name="txtCAtAdvanced" FontWeight="Bold" Grid.Column="3" Grid.Row="5"  Text="Advanced" HorizontalAlignment="Center" VerticalAlignment="Center" Style="{StaticResource PhoneTextSmallStyle}" TextAlignment="Center" />
 
         <Image Grid.Column="4" Grid.Row="5"
                    
@@ -141,7 +141,7 @@
                     
                     Name="btnCAtOldies"
                     Source="Images\category grey.png" />
-        <TextBlock  Grid.Column="4" Grid.Row="5"  Text="Oldies" HorizontalAlignment="Center" VerticalAlignment="Center" Style="{StaticResource PhoneTextSmallStyle}" TextAlignment="Center" />
+        <TextBlock  Name="txtCAtOldies" FontWeight="Bold" Grid.Column="4" Grid.Row="5"  Text="Oldies" HorizontalAlignment="Center" VerticalAlignment="Center" Style="{StaticResource PhoneTextSmallStyle}" TextAlignment="Center" />
 
 
 
