--- a/MenuPage.xaml
+++ b/MenuPage.xaml
@@ -28,6 +28,10 @@
 
         <!--ContentPanel - place additional content here-->
         <Grid x:Name="ContentPanel" Margin="0,0,0,0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="534*" />
+                <RowDefinition Height="234*" />
+            </Grid.RowDefinitions>
             <!--<Button  Height="100" HorizontalAlignment="Left" Margin="250,290,0,0" Name="btnPlay" VerticalAlignment="Top" Width="160" BorderBrush="{x:Null}" Click="btnPlay_Click">
                 <Button.Background>
                     <ImageBrush ImageSource="/GrandAStudio.Filmia;component/Images/PLAY.png" />
@@ -44,30 +48,28 @@
                     <ImageBrush ImageSource="/GrandAStudio.Filmia;component/Images/STATS.png" />
                 </Button.Background>
             </Button>-->
-            <HyperlinkButton NavigateUri="Http://www.facebook.com/Ganda.Studios" TargetName="_blank"   Height="72" Margin="0,686,361,0" Name="btnFacebook" VerticalAlignment="Top" BorderBrush="{x:Null}" Click="btnFacebook_Click">
+            <HyperlinkButton NavigateUri="Http://www.facebook.com/Ganda.Studios" TargetName="_blank"   Height="72" Margin="0,152,361,0" Name="btnFacebook" VerticalAlignment="Top" BorderBrush="{x:Null}" Click="btnFacebook_Click" Grid.Row="1">
                 <HyperlinkButton.Background>
                     <ImageBrush ImageSource="/GrandAStudio.Filmia;component/Images/FaceBook_128x128.png" />
                 </HyperlinkButton.Background>
             </HyperlinkButton>
-            <HyperlinkButton NavigateUri="Http://twitter.com/Ganda_Studios" TargetName="_blank"   Height="72" HorizontalAlignment="Right" Margin="0,686,266,0" Name="btnTwitter" VerticalAlignment="Top" Width="72" BorderBrush="{x:Null}" Click="btnTwitter_Click">
+            <HyperlinkButton NavigateUri="Http://twitter.com/Ganda_Studios" TargetName="_blank"   Height="72" HorizontalAlignment="Right" Margin="0,152,266,0" Name="btnTwitter" VerticalAlignment="Top" Width="84" BorderBrush="{x:Null}" Click="btnTwitter_Click" Grid.Row="1">
                 <HyperlinkButton.Background>
-                    <ImageBrush ImageSource="/GrandAStudio.Filmia;component/Images/twitter_newbird_blue.png" />
+                    <ImageBrush ImageSource="/GrandAStudio.Filmia;component/Images/twitter_newbird_blue2.png" Stretch="UniformToFill" />
                 </HyperlinkButton.Background>
             </HyperlinkButton>
-            <Image Height="200" HorizontalAlignment="Left" Margin="0,0,0,0" Name="image1" Stretch="Fill" VerticalAlignment="Top" Width="480" Source="/GrandAStudio.Filmia;component/Images/filmia.png" />
+            <Image Height="200" HorizontalAlignment="Left" Name="image1" Stretch="Fill" VerticalAlignment="Top" Width="480" Source="/GrandAStudio.Filmia;component/Images/filmia.png" />
 
-            <Image Height="150" HorizontalAlignment="Left" Margin="232,240,0,0" Name="btnPlay" Stretch="Fill" VerticalAlignment="Top" Width="240"  
+            <Image Height="130" HorizontalAlignment="Left" Margin="233,240,0,0" Name="btnPlay" Stretch="Fill" VerticalAlignment="Top" Width="240"  
                    Source="Images\PLAY.png"
                    Tap="btnPlay_Click" 
                     />
-            <Image Height="150" HorizontalAlignment="Left" Margin="226,0,0,222" Name="btnOpt" Stretch="Fill" VerticalAlignment="Bottom" Width="240"  
+            <Image Height="130" HorizontalAlignment="Left" Margin="226,0,0,33" Name="btnOpt" Stretch="Fill" VerticalAlignment="Bottom" Width="240"  
                    Source="Images\OPTIONS.png"
-                   Tap="btnOption_Click" 
-                    />
-            <Image Height="150" HorizontalAlignment="Left" Margin="226,552,0,0" Name="btnStats" Stretch="Fill" VerticalAlignment="Top" Width="240"  
+                   Tap="btnOption_Click" />
+            <Image Height="130" HorizontalAlignment="Left" Margin="226,502,0,0" Name="btnStats" Stretch="Fill" VerticalAlignment="Top" Width="240"  
                    Source="Images\STATS.png"
-                   Tap="btnStats_Click" 
-                    />
+                   Tap="btnStats_Click" Grid.RowSpan="2" />
         </Grid>
     </Grid>
  
