--- a/SampleData/MainViewModelSampleData.xaml
+++ b/SampleData/MainViewModelSampleData.xaml
@@ -2,7 +2,10 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"       
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="clr-namespace:GrandAStudio.Filmia" 
-    SampleProperty="Sample Text Property Value">
+   
+    CurrentScore="10"
+    GameRightAnswer="3"
+    GameWrongAnswer="12">
     
     <local:MainViewModel.Items >
         <local:Questions Question=" Test QQQQQQ qqqq QQQ ???" Answer1=" 1234" Answer2=" 32434" Answer3=" 343434" Answer4="sdfsdf"  >
@@ -16,5 +19,9 @@
             
         </local:Questions>
     </local:MainViewModel.CurrentQuestion>
-    
+    <local:MainViewModel.GScore>
+        
+        <local:Score Total="123" TotalGames="33" TotalPasses="12" TotalQuestions="12" TotalRightAnswers="12" TotlaWrongAnswers="12"></local:Score>
+    </local:MainViewModel.GScore>
+
 </local:MainViewModel>
